All tests are green.